--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,5 @@ Imports:
     dplyr
 Suggest:
     testthat (>= 3.0.0)
+URL: https://github.com/ptiscornia/c40tools
+BugReports: https://github.com/ptiscornia/c40tools/issues
