--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(c40_pallets)
 export(clean_text)
 export(get_dw_connection)
 export(get_dw_db_example)
+export(get_googledrive_path)
 export(scale_color_c40)
 export(scale_fill_c40)
