add get_c40cities function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_css)
 export(c40_colors)
 export(c40_pallets)
 export(clean_text)
+export(get_c40cities)
 export(get_dw_connection)
 export(get_dw_db_example)
 export(get_googledrive_path)
