add check_city_names() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_css)
 export(c40_colors)
 export(c40_pallets)
 export(calc_ghg)
+export(check_city_names)
 export(clean_text)
 export(get_c40cities)
 export(get_dw_connection)
