--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends: 
-    mgsub,
     R (>= 2.10)
 Imports: 
     assertthat,
@@ -23,7 +22,10 @@ Imports:
     dplyr,
     stringr,
     tibble,
-    dbplyr
+    dbplyr,
+    mgsub,
+    waldo,
+    curl
 Suggest:
     testthat (>= 3.0.0)
 URL: https://github.com/ptiscornia/c40tools
