improve function and package documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 export(add_css)
 export(c40_colors)
 export(c40_pallets)
-export(calc_ghg)
+export(calc_ghg_emissions)
+export(check_and_correct_cities)
 export(check_city_names)
 export(clean_text)
 export(get_c40cities)
