add tier dataset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,6 @@ export(get_c40cities)
 export(get_dw_connection)
 export(get_dw_db_example)
 export(get_googledrive_path)
+export(round_up)
 export(scale_color_c40)
 export(scale_fill_c40)
