--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,31 +2,33 @@ Package: c40tools
 Type: Package
 Title: C40 Cities Toolset
 Version: 1.0.1.9000
-Authors@R: person("Pablo", "Tiscornia", , "ptiscornia@turismo.gob.ar", role = c("aut", "cre"))
-Description: C40 set of tools for working with data and reporting in R
+Authors@R: person("Pablo", "Tiscornia", , "ptiscornia@c40.org", role = c("aut", "cre"))
+Description: C40 set of tools for working with data and reporting in R.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
-Depends: 
-    R (>= 2.10)
-Imports: 
+RoxygenNote: 7.3.3
+Depends:
+    R (>= 4.1.0)
+Imports:
     assertthat,
-    ggplot2,
     curl,
     DBI,
+    dbplyr,
+    dplyr,
+    ggplot2,
     glue,
+    mgsub,
     RPostgres,
+    stringdist,
+    stringr,
     sysfonts,
     tableHTML,
-    dplyr,
-    stringr,
     tibble,
-    dbplyr,
-    mgsub,
-    waldo,
-    curl
-Suggest:
-    testthat (>= 3.0.0)
-URL: https://github.com/ptiscornia/c40tools
-BugReports: https://github.com/ptiscornia/c40tools/issues
+    waldo
+Suggests:
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown
+URL: https://github.com/C40-Cities-Climate-Leadership-Group/c40tools
+BugReports: https://github.com/C40-Cities-Climate-Leadership-Group/c40tools/issues
