test: add testthat infrastructure and initial test suite
Configure testing:
- Set up testthat edition 3
- Add Config/testthat/edition to DESCRIPTION

Test coverage (82 tests):
- test-colours.R: c40_colors, c40_pallets, scale_color_c40, scale_fill_c40
- test-clean-text.R: accent removal, city names, vectors
- test-round-up.R: positive/negative numbers, vectorisation, edge cases
- test-db-connection.R: environment variable validation
- test-calc-ghg-emissions.R: argument validation

All tests pass: 0 failures, 6 warnings (ggplot2 deprecation), 1 skip

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,3 +32,4 @@ Suggests:
     rmarkdown
 URL: https://github.com/C40-Cities-Climate-Leadership-Group/c40tools
 BugReports: https://github.com/C40-Cities-Climate-Leadership-Group/c40tools/issues
+Config/testthat/edition: 3
