feat: add comprehensive brand.yml system for C40 visual identity
- Add _brand.yml specification based on September 2025 brand guidelines
- Create R helper functions: c40_brand(), c40_colours(), c40_fonts(),
  c40_text_colour(), c40_brand_path()
- Update colour palette to match new guidelines:
  - Add navy (#053D6B) and forest (#056608) colours
  - Adjust purple for accessibility (#7E65C1)
  - Add mid and light tints for all colours
- Update palettes: qualitative (7 colours), sequential, divergent
- Load Figtree as official C40 font (September 2025)
- Rename PDF to portable filename (no spaces)
- Add yaml package dependency
- Add comprehensive test suite for brand functions (32 tests)
- Update existing colour tests for new palette

The brand.yml follows Quarto specification for seamless integration
with Shiny dashboards and Quarto reports.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
     sysfonts,
     tableHTML,
     tibble,
-    waldo
+    waldo,
+    yaml
 Suggests:
     testthat (>= 3.0.0),
     knitr,
