refactor: deprecate c40_pallets() in favour of c40_palettes()
- Create c40_palettes() with correct spelling as primary function
- Add deprecation warning to c40_pallets() that calls c40_palettes()
- Update scale_fill_c40() and scale_color_c40() to use c40_palettes()
- Add input validation with informative error messages
- Improve documentation with examples and cross-references
- Add tests for deprecation warning and backwards compatibility

Breaking change: c40_pallets() now shows deprecation warning.
Users should migrate to c40_palettes().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(c40_brand_path)
 export(c40_colors)
 export(c40_colours)
 export(c40_fonts)
+export(c40_palettes)
 export(c40_pallets)
 export(c40_text_colour)
 export(calc_ghg_emissions)
